--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@
 }
 @media screen and (min-width: 800px) {
   .header {
-    font-size: 3rem;
     margin-top: auto;
     font-size: 2.5rem;
   }
@@ -44,6 +43,7 @@
 @media screen and (min-width: 800px) {
   .header .logo-container h1 span {
     display: inline;
+    font-size: 2.5rem;
   }
 }
 .header .logo-container .logo {
@@ -331,6 +331,7 @@
 .collage-image-one img {
   width: 100%;
   height: auto;
+  object-fit: cover;
 }
 
 .collage-text {
@@ -344,26 +345,26 @@
     grid-row: 21/23;
     grid-column: 4/7;
     text-align: center;
-    margin: 5rem 8rem 0 8rem;
+    margin: 3rem 4rem 0 4rem;
   }
 }
 .collage-text h2 {
   margin: 0 0 1rem 1rem;
   text-align: start;
-  font-size: 2.1rem;
+  font-size: clamp(1.2rem, 1.8vw + 0.35rem, 2.3rem);
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   text-align: left;
 }
 .collage-text h3 {
   margin: 0 0 0 1rem;
-  font-size: 1.9rem;
+  font-size: clamp(1rem, 1.8vw + 0.15rem, 2rem);
   text-align: left;
 }
 .collage-text button {
   color: #fff;
-  height: 70px;
-  width: 300px;
+  height: 60px;
+  width: 280px;
   border: none;
   border-radius: 0.2rem;
   background-color: #E3170A;
@@ -403,26 +404,26 @@
     grid-row: 26/31;
     grid-column: 1/4;
     text-align: center;
-    margin: 5rem 8rem 0 8rem;
+    margin: 3rem 4rem 0 4rem;
   }
 }
 .collage-text-two h2 {
   margin: 0 0 1rem 1rem;
   text-align: start;
-  font-size: 2.1rem;
+  font-size: clamp(1.2rem, 1.8vw + 0.7rem, 2.3rem);
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   text-align: left;
 }
 .collage-text-two h3 {
   margin: 0 0 0 1rem;
-  font-size: 1.9rem;
+  font-size: clamp(1rem, 1.8vw + 0.2rem, 2rem);
   text-align: left;
 }
 .collage-text-two button {
   color: #fff;
-  height: 70px;
-  width: 300px;
+  height: 60px;
+  width: 280px;
   border: none;
   border-radius: 0.2rem;
   background-color: #E3170A;
@@ -430,7 +431,8 @@
   float: left;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
+  margin-top: 1rem;
 }
 
 .footer {
