--- a/src/style.scss
+++ b/src/style.scss
@@ -6,8 +6,6 @@
     font-weight: 700;
     font-style: normal;
     font-size: 1.3rem;
-    padding: 0 60px;
-    margin: 0px;
     border: 0;
     border-radius: 0.2rem;
     background-color: #8ACFE5;
@@ -130,14 +128,9 @@
 .header-image {
   grid-row: 2 / 6;
   grid-column: 1 / 7;
-  overflow: hidden;
 
   img {
     width: 100%;
-    height: auto;
-    object-fit: cover;
-    width: 100%;
-    max-height: 450px;
   }
 }
 
@@ -147,7 +140,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 2rem 0 2.5rem 0;
 
   @include button-group;
 
@@ -172,7 +164,7 @@
 
     @media screen and (min-width: 800px) {
       display: block;
-      margin: 5rem;
+      margin: 4rem;
     }
   }
 
@@ -217,7 +209,6 @@
   .room {
     min-width: 400px;
     box-shadow: 0 0 2rem rgba(0, 0, 0, 0.25);
-    height: auto;
     margin: 0 0rem 4rem 2rem;
     border-radius: 0.3rem;
 
@@ -231,7 +222,6 @@
     }
 
     img {
-      height: auto;
       width: 100%;
       border-top-left-radius: 0.3rem;
       border-top-right-radius: 0.3rem;
@@ -255,8 +245,7 @@
 
     .participants {
       display: flex;
-      padding-left: 1rem;
-      padding-bottom: 15px;
+      padding: 0 0 1rem 1rem;
       font-size: 0.9rem;
     }
 
@@ -314,12 +303,10 @@
     border: 2px solid #8ACFE5;
     color: #8ACFE5;
     padding: 20px 60px 20px 60px;
-    margin-bottom: 2rem;
     background-color: transparent;
     border-radius: 0.3rem;
     @include roboto-bold;
     font-size: 1.4rem;
-    cursor: pointer;
     margin-bottom: 8rem;
   }
 }
@@ -331,13 +318,10 @@
   @media screen and (min-width: 800px) {
     grid-row: 21 / 23;
     grid-column: 1 / 4;
-    align-items: stretch;
   }
 
   img {
     width: 100%;
-    height: auto;
-    object-fit: cover;
   }
 }
 
@@ -379,7 +363,6 @@
     float: left;
     @include roboto-bold;
     font-size: 1.4rem;
-    margin-top: 1rem;
   }
 }
 
@@ -394,8 +377,6 @@
 
   img {
     width: 100%;
-    height: auto;
-    object-fit: cover;
   }
 }
 
@@ -438,7 +419,6 @@
     float: left;
     @include roboto-bold;
     font-size: 1.4rem;
-    margin-top: 1rem;
   }
 }
 
@@ -451,7 +431,6 @@
   margin-top: 8rem;
 
   section {
-    padding: 0;
     margin: 3rem 1rem 1rem;
   }
 
