--- a/style.css
+++ b/style.css
@@ -78,14 +78,9 @@
 .header-image {
   grid-row: 2/6;
   grid-column: 1/7;
-  overflow: hidden;
 }
 .header-image img {
   width: 100%;
-  height: auto;
-  object-fit: cover;
-  width: 100%;
-  max-height: 450px;
 }
 
 .button-group {
@@ -94,7 +89,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 2rem 0 2.5rem 0;
 }
 .button-group button {
   color: #011827;
@@ -102,8 +96,6 @@
   font-weight: 700;
   font-style: normal;
   font-size: 1.3rem;
-  padding: 0 60px;
-  margin: 0px;
   border: 0;
   border-radius: 0.2rem;
   background-color: #8ACFE5;
@@ -147,7 +139,7 @@
 @media screen and (min-width: 800px) {
   .review div:nth-child(1) {
     display: block;
-    margin: 5rem;
+    margin: 4rem;
   }
 }
 .review img {
@@ -191,7 +183,6 @@
 .popular-rooms .room {
   min-width: 400px;
   box-shadow: 0 0 2rem rgba(0, 0, 0, 0.25);
-  height: auto;
   margin: 0 0rem 4rem 2rem;
   border-radius: 0.3rem;
 }
@@ -205,7 +196,6 @@
   margin-right: 2rem;
 }
 .popular-rooms .room img {
-  height: auto;
   width: 100%;
   border-top-left-radius: 0.3rem;
   border-top-right-radius: 0.3rem;
@@ -225,8 +215,7 @@
 }
 .popular-rooms .room .participants {
   display: flex;
-  padding-left: 1rem;
-  padding-bottom: 15px;
+  padding: 0 0 1rem 1rem;
   font-size: 0.9rem;
 }
 .popular-rooms .room p {
@@ -262,8 +251,6 @@
   font-weight: 700;
   font-style: normal;
   font-size: 1.3rem;
-  padding: 0 60px;
-  margin: 0px;
   border: 0;
   border-radius: 0.2rem;
   background-color: #8ACFE5;
@@ -307,13 +294,11 @@
   border: 2px solid #8ACFE5;
   color: #8ACFE5;
   padding: 20px 60px 20px 60px;
-  margin-bottom: 2rem;
   background-color: transparent;
   border-radius: 0.3rem;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 1.4rem;
-  cursor: pointer;
   margin-bottom: 8rem;
 }
 
@@ -325,13 +310,10 @@
   .collage-image-one {
     grid-row: 21/23;
     grid-column: 1/4;
-    align-items: stretch;
   }
 }
 .collage-image-one img {
   width: 100%;
-  height: auto;
-  object-fit: cover;
 }
 
 .collage-text {
@@ -373,7 +355,6 @@
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 1.4rem;
-  margin-top: 1rem;
 }
 
 .collage-image-two {
@@ -388,8 +369,6 @@
 }
 .collage-image-two img {
   width: 100%;
-  height: auto;
-  object-fit: cover;
 }
 
 .collage-text-two {
@@ -432,7 +411,6 @@
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 1.4rem;
-  margin-top: 1rem;
 }
 
 .footer {
@@ -444,7 +422,6 @@
   margin-top: 8rem;
 }
 .footer section {
-  padding: 0;
   margin: 3rem 1rem 1rem;
 }
 .footer nav {
