--- a/src/style.scss
+++ b/src/style.scss
@@ -341,15 +341,25 @@
   h2 {
     margin: 0 0 1rem 1rem;
     text-align: start;
-    font-size: clamp(1.2rem, 1.8vw + 0.35rem, 2.3rem);
+    font-size: clamp(1.2rem, 1.8vw + 0.3rem, 2.3rem);
     @include roboto-bold;
     text-align: left;
+
+    @media screen and (max-width: 800px) {
+      font-size: 2rem;
+      padding: 0 1rem 0 1rem;
+    }
   }
 
   h3 {
     margin: 0 0 0 1rem;
     font-size: clamp(1rem, 1.8vw + 0.15rem, 2rem);
     text-align: left;
+
+    @media screen and (max-width: 800px) {
+      font-size: 1.8rem;
+      padding: 0 1rem 0 1rem;
+    }
   }
 
   button {
@@ -397,15 +407,23 @@
   h2 {
     margin: 0 0 1rem 1rem;
     text-align: start;
-    font-size: clamp(1.2rem, 1.8vw + 0.7rem, 2.3rem);
+    font-size: clamp(1.2rem, 1.8vw + 0.3rem, 2.3rem);
     @include roboto-bold;
     text-align: left;
+    @media screen and (max-width: 800px) {
+      font-size: 2rem;
+      padding: 0 1rem 0 1rem;
+    }
   }
 
   h3 {
     margin: 0 0 0 1rem;
-    font-size: clamp(1rem, 1.8vw + 0.2rem, 2rem);
+    font-size: clamp(1rem, 1.8vw + 0.15rem, 2rem);
     text-align: left;
+    @media screen and (max-width: 800px) {
+      font-size: 1.8rem;
+      padding: 0 1rem 0 1rem;
+    }
   }
 
   button {
