--- a/style.css
+++ b/style.css
@@ -333,15 +333,27 @@
 .collage-text h2 {
   margin: 0 0 1rem 1rem;
   text-align: start;
-  font-size: clamp(1.2rem, 1.8vw + 0.35rem, 2.3rem);
+  font-size: clamp(1.2rem, 1.8vw + 0.3rem, 2.3rem);
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   text-align: left;
+}
+@media screen and (max-width: 800px) {
+  .collage-text h2 {
+    font-size: 2rem;
+    padding: 0 1rem 0 1rem;
+  }
 }
 .collage-text h3 {
   margin: 0 0 0 1rem;
   font-size: clamp(1rem, 1.8vw + 0.15rem, 2rem);
   text-align: left;
+}
+@media screen and (max-width: 800px) {
+  .collage-text h3 {
+    font-size: 1.8rem;
+    padding: 0 1rem 0 1rem;
+  }
 }
 .collage-text button {
   color: #fff;
@@ -389,15 +401,27 @@
 .collage-text-two h2 {
   margin: 0 0 1rem 1rem;
   text-align: start;
-  font-size: clamp(1.2rem, 1.8vw + 0.7rem, 2.3rem);
+  font-size: clamp(1.2rem, 1.8vw + 0.3rem, 2.3rem);
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   text-align: left;
 }
+@media screen and (max-width: 800px) {
+  .collage-text-two h2 {
+    font-size: 2rem;
+    padding: 0 1rem 0 1rem;
+  }
+}
 .collage-text-two h3 {
   margin: 0 0 0 1rem;
-  font-size: clamp(1rem, 1.8vw + 0.2rem, 2rem);
+  font-size: clamp(1rem, 1.8vw + 0.15rem, 2rem);
   text-align: left;
+}
+@media screen and (max-width: 800px) {
+  .collage-text-two h3 {
+    font-size: 1.8rem;
+    padding: 0 1rem 0 1rem;
+  }
 }
 .collage-text-two button {
   color: #fff;
