--- a/src/style.scss
+++ b/src/style.scss
@@ -94,28 +94,52 @@
       width: auto;
       margin-right: 1rem;
     }
+
+    .menu-open-button {
+      @media screen and (min-width: 800px) {
+        display: none;
+      }
+    }
+
   }
 
   nav {
+    @media screen and (max-width: 800px) {
     display: none;
-    margin-bottom: 1.5rem;
+    position: fixed;
+    width: 95%;
+    height: 95%;
+    top: 0px;
+    right: 0px;
+    margin: 20px;
+    background-color: #011827;
+    justify-content: center;
+
+    .menu-close-button {
+      @media screen and (min-width: 800px) {
+        display: none;
+      }
+    }
+  }
+    
 
     @media screen and (min-width: 800px) {
       display: block;
-    }
+      margin-bottom: 1.5rem;
 
-    ul {
-      display: flex;
-      justify-content: space-evenly;
-      list-style: none;
-      margin: 0 7rem 0 7rem;
-
-      a {
-        color: #ffffff;
+      ul {
+        display: flex;
+        justify-content: space-evenly;
         list-style: none;
-        font-size: 1.5rem;
-        text-decoration: none;
-        @include roboto-bold;
+        margin: 0 7rem 0 7rem;
+  
+        a {
+          color: #ffffff;
+          list-style: none;
+          font-size: 1.5rem;
+          text-decoration: none;
+          @include roboto-bold;
+        }
       }
     }
   }
