--- a/style.css
+++ b/style.css
@@ -51,28 +51,48 @@
   width: auto;
   margin-right: 1rem;
 }
-.header nav {
-  display: none;
-  margin-bottom: 1.5rem;
+@media screen and (min-width: 800px) {
+  .header .logo-container .menu-open-button {
+    display: none;
+  }
+}
+@media screen and (max-width: 800px) {
+  .header nav {
+    display: none;
+    position: fixed;
+    width: 95%;
+    height: 95%;
+    top: 0px;
+    right: 0px;
+    margin: 20px;
+    background-color: #011827;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 800px) and (min-width: 800px) {
+  .header nav .menu-close-button {
+    display: none;
+  }
 }
 @media screen and (min-width: 800px) {
   .header nav {
     display: block;
+    margin-bottom: 1.5rem;
   }
-}
-.header nav ul {
-  display: flex;
-  justify-content: space-evenly;
-  list-style: none;
-  margin: 0 7rem 0 7rem;
-}
-.header nav ul a {
-  color: #ffffff;
-  list-style: none;
-  font-size: 1.5rem;
-  text-decoration: none;
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
+  .header nav ul {
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
+    margin: 0 7rem 0 7rem;
+  }
+  .header nav ul a {
+    color: #ffffff;
+    list-style: none;
+    font-size: 1.5rem;
+    text-decoration: none;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+  }
 }
 
 .header-image {
