--- a/src/style.scss
+++ b/src/style.scss
@@ -103,6 +103,25 @@
 
   }
 
+  .with-animation {
+    animation-name: color-shift;
+    animation-duration: 0.2s;
+    animation-fill-mode:forwards;
+  }
+
+  @keyframes color-shift {
+    from {
+      background-color:rgb(255, 255, 255);
+      display: none;
+      opacity: 0;
+    }
+
+    to {
+      background-color: #011827;
+      opacity: 1;
+    }
+  }
+
   .nav-menu {
     @media screen and (max-width: 800px) {
     display: none;
