--- a/style.css
+++ b/style.css
@@ -56,6 +56,22 @@
     display: none;
   }
 }
+.header .with-animation {
+  animation-name: color-shift;
+  animation-duration: 0.2s;
+  animation-fill-mode: forwards;
+}
+@keyframes color-shift {
+  from {
+    background-color: rgb(255, 255, 255);
+    display: none;
+    opacity: 0;
+  }
+  to {
+    background-color: #011827;
+    opacity: 1;
+  }
+}
 @media screen and (max-width: 800px) {
   .header .nav-menu {
     display: none;
