--- a/src/scss/popular-rooms.scss
+++ b/src/scss/popular-rooms.scss
@@ -47,20 +47,20 @@
             display: flex;
             padding-left: 15px;
 
+            .star {
+                display: block;
+                width: 1.2rem;
+                height: 1.2rem;
+
+                background-image: url('/img/star_no.png');
+                background-size: contain;
+            }
+
             .filled {
                 display: block;
                 width: 1.2rem;
                 height: 1.2rem;
-
                 background-image: url('/img/star.png');
-                background-size: contain;
-            }
-
-            .unfilled {
-                display: block;
-                width: 1.2rem;
-                height: 1.2rem;
-                background-image: url('/img/star_no.png');
                 background-size: contain;
             }
         }
