--- a/src/scss/popular-rooms.scss
+++ b/src/scss/popular-rooms.scss
@@ -17,6 +17,8 @@
     white-space: nowrap;
 
     .room {
+        display: grid;
+        grid-template-columns: 0.7rem 1fr 1fr 0.7rem;
         min-width: 400px;
         box-shadow: 0 0 2rem rgba(0, 0, 0, 0.25);
         margin: 0 0rem 4rem 2rem;
@@ -32,18 +34,21 @@
         }
 
         img {
+            grid-column: span 4;
             width: 100%;
             border-top-left-radius: 0.3rem;
             border-top-right-radius: 0.3rem;
         }
 
         h2 {
+            grid-column: 2 / 4;
             margin: 0.5rem 0 0 0.8rem;
             text-align: left;
             font-size: 1.7rem;
         }
 
         .rating {
+            grid-column: 2 / 3;
             display: flex;
             padding-left: 15px;
 
@@ -66,18 +71,21 @@
         }
 
         .participants {
-            display: flex;
+            grid-column: 3 / 4;
+            text-align: right;
             padding: 0 0 1rem 1rem;
             font-size: 0.9rem;
         }
 
         p {
+            grid-column: 2 / 4;
             white-space: normal;
             padding: 0px 15px 10px 15px;
             font-size: 1.2rem;
         }
 
         button {
+            grid-column: 3 / 4;
             color: #fff;
             @include roboto-bold;
             font-size: 1rem;
